--- a/src/app/main/home/types/lymphatic/lymphatic.component.html
+++ b/src/app/main/home/types/lymphatic/lymphatic.component.html
@@ -1,3 +1,38 @@
-<p>
-  lymphatic works!
-</p>
+<div class="container">
+  <div class="">
+    <h1>LYMPHATIC DRAINAGE MASSAGE</h1>
+    <p>
+      A session addresses stressors and imbalances within the body, on a physical, mental, emotional and spiritual level, pertaining
+      to the the matter dealt with in the session
+    </p>
+    <div class="row">
+      <div class="col-4">
+        <h5>Main actions of Lymphatic drainage protocol</h5>
+        <ul>
+          <li>Stimulating Body Fluid Circulation</li>
+          <li>Stimulating the Immune System</li>
+          <li>Stimulating the nervoud System</li>
+        </ul>
+      </div>
+      <div class="col-8">
+        <h5>Benefits: </h5>
+        <div class="row">
+          <ul>
+            <li>Improved immune system function</li>
+            <li>Increased production of antibodies</li>
+            <li>Relief of pain and swelling</li>
+            <li>Headache Relief</li>
+            <li>Relief of fluid retention for pregnant and lactating mothers</li>
+          </ul>
+          <ul>
+            <li>Clearer skin complexion</li>
+            <li>Reduction of puffiness in face</li>
+            <li>Toxin removal</li>
+            <li>Increase in energy level</li>
+            <li>Relaxation</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
