--- a/src/app/main/home/types/massage/massage.component.html
+++ b/src/app/main/home/types/massage/massage.component.html
@@ -1,18 +1,17 @@
-
-  <div class="container">
-      <div class="">
-        <h1>MASSAGE</h1>
-        <p>
-            Hawaiian Kahuna Massage is powerful healing bodywork. This is one of the best massages you will ever experience!
-          </p>
-          <p>
-            Kahuna massage incorporates long, flowing strokes using the forearms, elbows, wrists and hands in a continuous, fluid, rhythmic
-            motion that can energize and ground you at the same time. Beautiful rhythmic music and special oils are used to
-            help you relax, rejuvenate and heal.
-          </p>
-          <p>
-            Kahuna Bodywork is a cleansing, powerful massage that may assist in balancing you on many levels – physical, emotional and
-            spiritual.
-          </p>
-      </div>
-    </div>
+<div class="container">
+  <div class="">
+    <h1>MASSAGE</h1>
+    <p>
+      Hawaiian Kahuna Massage is powerful healing bodywork. This is one of the best massages you will ever experience!
+    </p>
+    <p>
+      Kahuna massage incorporates long, flowing strokes using the forearms, elbows, wrists and hands in a continuous, fluid, rhythmic
+      motion that can energize and ground you at the same time. Beautiful rhythmic music and special oils are used to help
+      you relax, rejuvenate and heal.
+    </p>
+    <p>
+      Kahuna Bodywork is a cleansing, powerful massage that may assist in balancing you on many levels – physical, emotional and
+      spiritual.
+    </p>
+  </div>
+</div>
