--- a/src/app/main/home/types/regional/regional.component.scss
+++ b/src/app/main/home/types/regional/regional.component.scss
@@ -2,5 +2,5 @@
     background-color: rgba(55, 130, 175, 0.6);
     border-radius: 30px;
     color: #00cbff;
-    padding: 1%
+    padding: 1%;    
 }
