--- a/src/app/main/home/types/types.component.html
+++ b/src/app/main/home/types/types.component.html
@@ -18,32 +18,47 @@
       <button class="btn" #kahunaMassageModal [routerLink]="['/therapies/massage']">Massage</button>
     </div>
     <div class="types col-3">
-      <button class="btn" #lymphaticModal [routerLink]="['/therapies/kinesiology']">Lymphatic drainage massage</button>
+      <button class="btn" #lymphaticModal [routerLink]="['/therapies/lymphatic']">Lymphatic drainage massage</button>
     </div>
     <div class="types col-3">
-      <button class="btn" #allergyModal [routerLink]="['/therapies/kinesiology']">Allergy nutrition protocol</button>
+      <button class="btn" #allergyModal [routerLink]="['/therapies/allergy']">Allergy nutrition protocol</button>
     </div>
     <div class="types col-3">
-      <button class="btn" #weightModal [routerLink]="['/therapies/kinesiology']">Weight Management and Control</button>
+      <button class="btn" #weightModal [routerLink]="['/therapies/weightManagement']">Weight Management</button>
     </div>
     <div class="types col-3">
-      <button class="btn" #chakraModal [routerLink]="['/therapies/kinesiology']">Chakra Balance</button>
+      <button class="btn" #chakraModal [routerLink]="['/therapies/chakra']">Chakra Balance</button>
     </div>
     <div class="types col-3">
-      <button class="btn" #pelvicModal [routerLink]="['/therapies/kinesiology']">Pelvic girdle allignment</button>
+      <button class="btn" #pelvicModal [routerLink]="['/therapies/pelvicGirdle']">Pelvic girdle allignment</button>
     </div>
     <div class="types col-3">
-      <button class="btn" #animalModal [routerLink]="['/therapies/kinesiology']">Animal Sessions</button>
+      <button class="btn" #animalModal [routerLink]="['/therapies/animal']">Animal Sessions</button>
     </div>
     <div class="types col-3">
-      <button class="btn" #adrenalFatigueModal [routerLink]="['/therapies/kinesiology']">Adrenal Fatigue</button>
+      <button class="btn" #adrenalFatigueModal [routerLink]="['/therapies/adrenalFatigue']">Adrenal Fatigue</button>
     </div>
     <div class="types col-3">
-      <button class="btn" #regionalMuscleModal [routerLink]="['/therapies/kinesiology']">Regional Muscle</button>
+      <button class="btn" #regionalMuscleModal [routerLink]="['/therapies/regionalMuscle']">Regional Muscle</button>
     </div>
-    <div class="types col-3">
-      <button class="btn" #regionalMuscleModal [routerLink]="['/therapies/kinesiology']">Pain Protocol</button>
-    </div>
+        <!-- <div class="types col-3">
+      <button class="btn" #regionalMuscleModal [routerLink]="['/therapies/painProtocol']">ADHD Brain Integration</button>
+    </div> -->
+    <!-- <div class="types col-3">
+      <button class="btn" #regionalMuscleModal [routerLink]="['/therapies/painProtocol']">Pain Protocol</button>
+    </div> -->
+    <!-- <div class="types col-3">
+      <button class="btn" #regionalMuscleModal [routerLink]="['/therapies/painProtocol']">Angst Protocol</button>
+    </div> -->
+    <!-- <div class="types col-3">
+      <button class="btn" #regionalMuscleModal [routerLink]="['/therapies/painProtocol']">Pre- and post-surgery</button>
+    </div> -->
+    <!-- <div class="types col-3">
+      <button class="btn" #regionalMuscleModal [routerLink]="['/therapies/painProtocol']">Sports Enhancement /button>
+    </div> -->
+    <!-- <div class="types col-3">
+      <button class="btn" #regionalMuscleModal [routerLink]="['/therapies/painProtocol']">Substance Abuse</button>
+    </div> -->
     <router-outlet></router-outlet>
     <div class="types col-10">
       <h3>
@@ -53,263 +68,3 @@
     </div>
   </div>
 </div>
-
-<!-- 
-<div bsModal #kinesiologyModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">KINESIOLOGY</h4>
-        <button type="button" class="close pull-right" (click)="kinesiologyModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>
-          A kinesiology session addresses stressors and imbalances within the body, on a physical, mental, emotional and spiritual
-          level, pertaining to the mater dealt with in the session.
-        </p>
-        <p>
-          Most health related issues, including heart disease, digestive problems, allergies, brain function, digestive disorders,
-          are stress related, and often caused by an incident or series of events, which trigger certain chemical responses
-          in the body, resulting in pain, discomfort and unwellness.
-        </p>
-        <p>
-          A session will assist you to deal with stress (work, relationships, financial, physical, mental) and emotional or other traumas
-          in general or related to a specific incident/s, which will enable you to cope with situations and view life from
-          a different perspective, thereby eventually changing your circumstances.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div bsModal #kahunaMassageModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">HAWAIIAN KAHUNA MASSAGE</h4>
-        <button type="button" class="close pull-right" (click)="kahunaMassageModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>
-          Hawaiian Kahuna Massage is powerful healing bodywork. This is one of the best massages you will ever experience!
-        </p>
-        <p>
-          Kahuna massage incorporates long, flowing strokes using the forearms, elbows, wrists and hands in a continuous, fluid, rhythmic
-          motion that can energize and ground you at the same time. Beautiful rhythmic music and special oils are used to
-          help you relax, rejuvenate and heal.
-        </p>
-        <p>
-          Kahuna Bodywork is a cleansing, powerful massage that may assist in balancing you on many levels – physical, emotional and
-          spiritual.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div bsModal #lymphaticModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">KINESIOLOGY</h4>
-        <button type="button" class="close pull-right" (click)="lymphaticModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>
-          Please be patient as this protocol will be soon be available
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div bsModal #allergyModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">ALLERGY SENSITIVITY & NUTRITION</h4>
-        <button type="button" class="close pull-right" (click)="allergyModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>
-          Allergy, Sensitivity and Nutrition protocol may assist in clearing sensitivities to foods and substances which are beneficial
-          to repair and maintenance of the human body and body systems and functions.
-        </p>
-        <p>
-          Establish foods and substances which are harmful, to eliminate and/or avoid for health and vitality. Determine nutritional
-          components required and to be added to your diet for optimal health and freedom of sensitivities. Work through
-          and clear emotional aspects and possible causes of the allergies and/or sensitivities experienced and possible
-          triggers of reactions to food and substances.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div bsModal #weightModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">WEIGHT MANAGEMENT & CONTROL</h4>
-        <button type="button" class="close pull-right" (click)="weightModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>
-          Assists with determining reasons for wieght gain and reasons for difficulties shaking off excess weight.
-        </p>
-        <p>
-          As food and weight are very emotional components in health, the emotional aspect are identified and dealt with to clear inhibiting
-          habits and patterns around eating.
-        </p>
-        <p>
-          Establish which foods to eliminate and/or avoid and wether additional nutrition is required to reach desired weight.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div bsModal #chakraModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">CHAKRA</h4>
-        <button type="button" class="close pull-right" (click)="chakraModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>
-          The Chakra Protocol assists in evaluating your chakras and clearing any blockages in the chakra energy centres. Determine
-          whether you need a specific affirmation for a specific chakra, say a mantra or need specific nutrition for your
-          chakras or one of the seven chakras.
-
-        </p>
-        <p>
-          Clearing the seven main chakras, Root, Sacral, Solar Plexus, Heart, Throat, Third Eye and Crown Chakras, improves your well
-          being and promotes coping mechanisms for different aspects of life.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div bsModal #pelvicModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">PELVIC GIRDLE</h4>
-        <button type="button" class="close pull-right" (click)="pelvicModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>
-          Pelvic Girdle Protocol assists in relieving back pain, hip pain, pain and discomfort of the legs and hips when walking, bending
-          down and standing up from a stting or lying down position.
-        </p>
-        <p>
-          Evaluation and correction of pelvic, lower back and leg muscles, while dealing with reltated emotional components.
-        </p>
-        <p>
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div bsModal #animalModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">KINESIOLOGY</h4>
-        <button type="button" class="close pull-right" (click)="animalModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>
-          Kinesiology is equally effective for animals and humans. All muscles of the animal can be tested and corrected via a surrogate,
-          normally the owner. Muscles of the surrogate will be tested and cleared before commencing the session of the animal.
-        </p>
-        <p>
-          Animal kinesiology assists in pain relief, sensitivities, dietary requirements and clearing stressors related to traumatic
-          experiences, such as relocating, injuries, and abandonment.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div bsModal #adrenalFatigueModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">ADRENAL FATIGUE</h4>
-        <button type="button" class="close pull-right" (click)="adrenalFatigueModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>
-          Regain vitality which has been drained by adrenal fatigue.
-        </p>
-        <p>
-          This session addresses mental and physical fatigue and chronic sore throats. Relief from aching, weak limbs, body pains and
-          headaches will ensure a renewed zest for life.
-        </p>
-        <p>
-          Brain fog, muddled thinking, depression and coordination problems may clear. Establish aspects of your life to change and
-          clear self sabotage.
-        </p>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div bsModal #regionalMuscleModal="bs-modal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h4 class="modal-title pull-left">Regional Muscle Protocol</h4>
-        <button type="button" class="close pull-right" (click)="regionalMuscleModal.hide()" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <p>
-          Assess and correct functions of all muscles in a region of the body. Each muscle in the specific region is evaluated and
-          appropriate asdjustments are made.
-        </p>
-        <p>
-          Establish wether any support in the form of nutrition, excercise, other therapies or actions are required.
-        </p>
-        <ul>
-          <li>Shoulder Region</li>
-          <li>Hand and finger Region</li>
-          <li>Arm and elbow Region</li>
-          <li>Neck and Back Region</li>
-          <li>Back and hip Region</li>
-          <li>Leg and knee Region</li>
-          <li>Foot Region</li>
-        </ul>
-      </div>
-    </div>
-  </div>
-</div> -->
