--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   <a href="javascript:void(0)" id="closeBtn" class="closebtn" (click)="closeNav()">&times;</a>
   <a routerLink="/"><img class="logo" src="../../assets/KinesiologyLogo.png" alt="Kinesiology Practice Logo"></a>
   <a routerLink="/">Home</a>
-  <a routerLink="/prices">Prices</a>
+  <a routerLink="/prices">Fees</a>
   <a routerLink="/foodForLife">FoodForLife</a>
   <a routerLink="/joinUs">JoinUs</a>  
   <a routerLink="/feedback">Feedback</a>  
