--- a/src/app/main/navbar/navbar.component.html
+++ b/src/app/main/navbar/navbar.component.html
@@ -3,7 +3,7 @@
   <a routerLink="/"><img class="logo" src="../../assets/KinesiologyLogo.png" alt="Kinesiology Practice Logo"></a>
   <a routerLink="/">Home</a>
   <a routerLink="/prices">Fees</a>
-  <a routerLink="/foodForLife">FoodForLife</a>
+  <a routerLink="/ForLife">ForLife</a>
   <a routerLink="/joinUs">JoinUs</a>  
   <a routerLink="/feedback">Feedback</a>  
 </div>
